Examples: Initial dark mode work - incomplete! Fix: input and select elements added by DataTables should inhert their color

--- a/css/jquery.dataTables.scss
+++ b/css/jquery.dataTables.scss
@@ -15,6 +15,7 @@ $jqueryui: false !default;
 	border-radius: 3px;
 	padding: 5px;
 	background-color: transparent;
+	color: inherit;
 }
 
 /*
